secured kafka connection changes for storage-backend

--- a/packages/storage-backend/storage-lib/src/main/resources/application.yml
+++ b/packages/storage-backend/storage-lib/src/main/resources/application.yml
@@ -40,7 +40,22 @@ spring:
     multipart:
       max-file-size: ${MAX_FILE_SIZE:3000MB}
       max-request-size: ${MAX_REQUEST_SIZE:3000MB}
-    
+
+  kafka:
+    producer:
+    bootstrap-servers: ${NAAS_BROKER:localhost:9092}
+    properties:
+      ssl:
+        truststore:
+          location: ${TRUSTSTORE_PATH:/XXXX/XXXX/truststore.jks}
+          password: ${TRUSTSTORE_PASSWORD:XXXX}
+          type: PKCS12
+        keystore:
+          location: ${KEYSTORE_PATH:/XXXX/XXXX/keystore.p12}
+          password: ${KEYSTORE_PASSWORD:XXXX}
+          type: PKCS12
+      security:
+          protocol: SSL  
   cloud:
     stream:
       default-binder: kafka
