secured kafka connection properties for trino backend

--- a/packages/trino-backend/trino-backend-lib/src/main/resources/application.yml
+++ b/packages/trino-backend/trino-backend-lib/src/main/resources/application.yml
@@ -31,6 +31,21 @@ spring:
 
     driverClassName: org.postgresql.Driver
 
+  kafka:
+    producer:
+    bootstrap-servers: ${NAAS_BROKER:XXXX:XXXX}
+    properties:
+      ssl:
+        truststore:
+          location: ${TRUSTSTORE_PATH:/XXXX/XXXX/truststore.jks}
+          password: ${TRUSTSTORE_PASSWORD:XXXX}
+          type: PKCS12
+        keystore:
+          location: ${KEYSTORE_PATH:/XXXX/XXXX/keystore.p12}
+          password: ${KEYSTORE_PASSWORD:XXXX}
+          type: PKCS12
+      security:
+          protocol: SSL 
   cloud:
     stream:
       default-binder: kafka
