added init changes for attaching cors

--- a/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
+++ b/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
@@ -616,7 +616,7 @@ definitions:
         $ref: "#/definitions/AttachPluginConfigVO"
       name:
         type: string
-        enum: ["oidc","jwt"]
+        enum: ["oidc","jwt","cors"]
     
         
  AttachPluginConfigVO:
