--- a/packages/authenticator-service/authenticator-lib/src/main/resources/application.yml
+++ b/packages/authenticator-service/authenticator-lib/src/main/resources/application.yml
@@ -43,6 +43,9 @@ management.endpoint.loggers.enabled: true
 management.endpoint.health.probes.enabled: true
 management.endpoint.health.show-details: always
 
+corsPlugin:
+  allowedUrls: ${ALLOWED_URLS:xxxxx}
+  maxAge: ${MAX_AGE:xxxxx}
 
 logging:
   service:
