--- a/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
+++ b/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
@@ -778,6 +778,9 @@ definitions:
       mobileNumber:
         type: string
         description: "Mobile number of the user"
+      authToken:
+        type: string
+        description: "Authentication Token of the user"
 
   SolutionProjectStatusVO:
     type: object
