--- a/packages/chronos/chronos-lib/src/main/resources/application.yml
+++ b/packages/chronos/chronos-lib/src/main/resources/application.yml
@@ -3,7 +3,20 @@ spring:
   application:
     name: dna-chronos-service
     version: 1.4.4
-
+  kafka:
+    bootstrap-servers: ${NAAS_BROKER:localhost:9092}
+    properties:
+      ssl:
+        truststore:
+          location: ${TRUSTSTORE_PATH:/XXXX/XXXX/truststore.jks}
+          password: ${TRUSTSTORE_PASSWORD:XXXX}
+          type: PKCS12
+        keystore:
+          location: ${KEYSTORE_PATH:/XXXX/XXXX/keystore.p12}
+          password: ${KEYSTORE_PASSWORD:XXXX}
+          type: PKCS12
+      security:
+        protocol: SSL
   cloud:
     vault:
       host: ${VAULT_HOST:localhost}
@@ -22,7 +35,8 @@ spring:
       default-binder: kafka
       kafka:
         binder:
-          brokers: ${NAAS_BROKER:hostXXXX:portXXXX}   
+          brokers: ${NAAS_BROKER:hostXXXX:portXXXX}
+          autoCreateTopics: true 
       bindings:
         output:
           binder: kafka
