--- a/deployment/kubernetes/helm/charts/storage-be/values.yaml
+++ b/deployment/kubernetes/helm/charts/storage-be/values.yaml
@@ -1,4 +1,4 @@
-# Default values for dna storage-be.
+# Default values for dna-storage-be.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 namespace: storage
