--- a/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
+++ b/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
@@ -378,7 +378,48 @@ paths:
         405:
           description: "Method not allowed"
         500:
-          description: "Internal error"        
+          description: "Internal error"  
+          
+ /kong/services/{serviceName}/apiAuthoriserPlugin:
+    post:
+      tags:
+        - "kong" 
+      summary: "Attach apiAuthoriserPlugin to service."
+      description: "Attach apiAuthoriserPlugin to service."
+      operationId: "attachApiAuthoriserPlugin"
+      parameters:      
+        - name: "attachApiAuthoriserPluginRequestVO"
+          in: "body"
+          description: "Request Body that contains data required for attaching a plugin to service"
+          required: true
+          schema:
+            $ref: "#/definitions/AttachApiAuthoriserPluginRequestVO"  
+        - name: "serviceName"
+          in: "path"
+          description: "Name of the service for which plugin has to be attached"
+          required: true
+          type: "string"    
+      responses:
+        200:
+          description: "Returns message of success"
+          schema:
+            $ref: "#/definitions/GenericMessage"
+        409:
+          description: "Conflict"
+          schema:
+            $ref: "#/definitions/GenericMessage"            
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/GenericMessage"
+        401:
+          description: "Request does not have sufficient credentials."
+        403:
+          description: "Request is not authorized."
+        405:
+          description: "Method not allowed"
+        500:
+          description: "Internal error" 
           
 # path to get service 
 #  supported http methods GET    
@@ -764,5 +805,35 @@ definitions:
     type: object
     properties:      
       csvalidateurl:
-        type: string             
+        type: string   
+
+ AttachApiAuthoriserPluginRequestVO:
+    type: object
+    properties:
+      data:
+        $ref: "#/definitions/AttachApiAuthoriserPluginVO"           
+        
+ AttachApiAuthoriserPluginVO:
+    type: object
+    properties:
+      config:
+        $ref: "#/definitions/AttachApiAuthoriserPluginConfigVO"
+      name:
+        type: string
+              
+ AttachApiAuthoriserPluginConfigVO:
+    type: object
+    properties:      
+      logType:
+        type: string    
+      wsconfigurl: 
+        type: string
+      applicationName:          
+        type: string
+      poolID:  
+        type: string
+      userinfoIntrospectionUri:  
+        type: string
+      enableUserinfoIntrospection: 
+        type : boolean          
  
