Kafka changes for naas

--- a/packages/naas/naas-lib/src/main/resources/application.yml
+++ b/packages/naas/naas-lib/src/main/resources/application.yml
@@ -61,7 +61,10 @@ spring:
       default-binder: kafka
       kafka:
         binder:
-          brokers: ${NAAS_BROKER:localhost:9092}
+          allow:
+            auto:
+              create:
+                topics: false
           
       bindings:
         output:
