added attaching api auth plugin and delete plugin changes

--- a/packages/code-server/code-server-lib/src/main/resources/application.yml
+++ b/packages/code-server/code-server-lib/src/main/resources/application.yml
@@ -146,6 +146,12 @@ kong:
    uiRecipesToUseOidc: ${UI_RECIPES_TO_USE_OIDC:XXXX}
    enableAuthTokenIntrospection: ${enableAuthTokenIntrospection:XXXX}
    csvalidateurl: ${csvalidateurl:XXXX}
+   logType: ${LOG_TYPE:XXXX}
+   wsconfigurl: ${WSCONFIGURL:XXXX}
+   applicationName: ${APPLICATION_NAME:XXXX}
+   poolID: ${POOL_ID:XXXX}
+   userinfoIntrospectionUri: ${USERINFO_INTROSPECTION_URL:XXXX}
+   enableUserinfoIntrospection: ${ENABLE_USERINFO_INTROSPECTION:XXXX}
 
 workspace:
   update: ${UPDATE_WORKSPACEDATA:XXXX}   
