--- a/packages/naas/naas-lib/src/main/resources/application.yml
+++ b/packages/naas/naas-lib/src/main/resources/application.yml
@@ -38,7 +38,20 @@ spring:
       max-file-size: 5MB
       max-request-size: 5MB
       
-     
+  kafka:
+    bootstrap-servers: ${NAAS_BROKER:localhost:9092}
+    properties:
+      ssl:
+        truststore:
+          location: ${TRUSTSTORE_PATH:/XXXX/XXXX/truststore.jks}
+          password: ${TRUSTSTORE_PASSWORD:XXXX}
+          type: PKCS12
+        keystore:
+          location: ${KEYSTORE_PATH:/XXXX/XXXX/keystore.p12}
+          password: ${KEYSTORE_PASSWORD:XXXX}
+          type: PKCS12
+      security:
+          protocol: SSL   
   cloud:
     stream:
       function:
@@ -48,7 +61,10 @@ spring:
       default-binder: kafka
       kafka:
         binder:
-          brokers: ${NAAS_BROKER:localhost:9092}
+          allow:
+            auto:
+              create:
+                topics: false
           
       bindings:
         output:
