--- a/deployment/kubernetes/helm/charts/data-product-be/templates/deployment.yaml
+++ b/deployment/kubernetes/helm/charts/data-product-be/templates/deployment.yaml
@@ -19,6 +19,7 @@ spec:
       labels:
         {{- include "data-product-be.selectorLabels" . | nindent 8 }}
     spec:
+      shareProcessNamespace: true
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
