--- a/deployment/kubernetes/helm/charts/code-server-backend/templates/deployment.yaml
+++ b/deployment/kubernetes/helm/charts/code-server-backend/templates/deployment.yaml
@@ -22,6 +22,7 @@ spec:
         {{- include "code-server-backend.selectorLabels" . | nindent 8 }}
         helm-revision: "{{ .Release.Revision }}"
     spec:
+      shareProcessNamespace: true
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
