--- a/deployment/kubernetes/helm/charts/dss-mfe/templates/deployment.yaml
+++ b/deployment/kubernetes/helm/charts/dss-mfe/templates/deployment.yaml
@@ -22,6 +22,7 @@ spec:
       {{- end }}
       {{- end }}        
     spec:
+      shareProcessNamespace: true
       {{- if .Values.vaultInjector.enable }}         
       serviceAccountName: {{ .Values.vaultInjector.saName }}
       {{- end }}    
