--- a/packages/storage-mfe/.docker.env
+++ b/packages/storage-mfe/.docker.env
@@ -1,6 +1,7 @@
 CONTAINER_APP_URL=${PROJECTSMO_CONTAINER_APP_URL}
 API_BASEURL=${PROJECTSMO_FRONTEND_API_BASEURL}
 STORAGE_API_BASEURL=${PROJECTSMO_STORAGE_API_BASEURL}
+REPORTS_API_BASEURL=${PROJECTSMO_REPORTS_API_BASEURL}
 TOU_HTML=${PROJECTSMO_STORAGE_TOU_HTML}
 ENABLE_DATA_CLASSIFICATION_SECRET= ${PROJECTSMO_ENABLE_DATA_CLASSIFICATION_SECRET}
 TRINO_API_BASEURL= ${PROJECTSMO_TRINO_API_BASEURL}
