--- a/packages/backend/dnambc-lib/src/main/resources/api/Visualization.yaml
+++ b/packages/backend/dnambc-lib/src/main/resources/api/Visualization.yaml
@@ -36,7 +36,7 @@
 #
 #  CHANGE HISTORY
 #
-#  Created By         :  ***REMOVED***
+#  Created By         :  BEALURI
 #
 #  Bug Number         :  
 #  Changed By         :  
