--- a/packages/backend/dnambc-lib/src/main/resources/api/Widget.yaml
+++ b/packages/backend/dnambc-lib/src/main/resources/api/Widget.yaml
@@ -35,7 +35,7 @@
 #
 #  CHANGE HISTORY
 #
-#  Created By         :  ***REMOVED***
+#  Created By         :  KAMERAO
 #
 #  Bug Number         :
 #  Changed By         :
