--- a/packages/model-registry/model-registry-lib/src/main/resources/api/modelRegistry.yaml
+++ b/packages/model-registry/model-registry-lib/src/main/resources/api/modelRegistry.yaml
@@ -35,7 +35,7 @@
 #
 #  CHANGE HISTORY
 #
-#  Created By         :  ***REMOVED***
+#  Created By         :  BEALURI
 #
 #  Bug Number         :  
 #  Changed By         :  
