--- a/packages/backend/dnambc-lib/src/main/resources/api/MarketingRole.yaml
+++ b/packages/backend/dnambc-lib/src/main/resources/api/MarketingRole.yaml
@@ -35,7 +35,7 @@
 #
 #  CHANGE HISTORY
 #
-#  Created By         :  ***REMOVED***
+#  Created By         :  pavithrajaini
 #
 #  Bug Number         :  
 #  Changed By         :  
