--- a/packages/backend/dnambc-lib/src/main/resources/api/RelatedProduct.yaml
+++ b/packages/backend/dnambc-lib/src/main/resources/api/RelatedProduct.yaml
@@ -34,7 +34,7 @@
 #
 #  CHANGE HISTORY
 #
-#  Created By         :  ***REMOVED***
+#  Created By         :  boonbaluri
 #
 #  Bug Number         :  
 #  Changed By         :  
