--- a/packages/data-product-backend/data-product-lib/src/main/resources/api/DataComplianceAudit.yaml
+++ b/packages/data-product-backend/data-product-lib/src/main/resources/api/DataComplianceAudit.yaml
@@ -35,7 +35,7 @@
 #
 #  CHANGE HISTORY
 #
-#  Created By         :  ***REMOVED***
+#  Created By         :  boonbaluri
 #
 #  Bug Number         :  
 #  Changed By         :  
