--- a/packages/naas/naas-lib/src/main/resources/api/notification.yaml
+++ b/packages/naas/naas-lib/src/main/resources/api/notification.yaml
@@ -16,7 +16,7 @@
 #
 #  CHANGE HISTORY
 #
-#  Created By         :  ***REMOVED***
+#  Created By         :  boonbaluri
 #
 #  Bug Number         :  
 #  Changed By         :  
