--- a/packages/trino-backend/trino-backend-lib/src/main/resources/api/parquetTrino.yaml
+++ b/packages/trino-backend/trino-backend-lib/src/main/resources/api/parquetTrino.yaml
@@ -35,7 +35,7 @@
 #
 #  CHANGE HISTORY
 #
-#  Created By         :  ***REMOVED***
+#  Created By         :  boonbaluri
 #
 #  Bug Number         :  
 #  Changed By         :  
