--- a/deployment/dockerfiles/clamav/1.0.1/freshclam.conf
+++ b/deployment/dockerfiles/clamav/1.0.1/freshclam.conf
@@ -113,7 +113,7 @@ DatabaseMirror database.clamav.net
 
 # Proxy settings
 # Default: disabled
-HTTPProxyServer ***REMOVED***
+HTTPProxyServer xxxx
 HTTPProxyPort 3128
 # HTTPProxyUsername myusername
 # HTTPProxyPassword mypass
