--- a/deployment/kubernetes/helm/charts/notebooks/templates/proxy-helm/service.yaml
+++ b/deployment/kubernetes/helm/charts/notebooks/templates/proxy-helm/service.yaml
@@ -38,4 +38,4 @@ spec:
       targetPort: 8000
   type: NodePort    
   #type: LoadBalancer
-  #loadBalancerIP: ***REMOVED***
+  #loadBalancerIP: xxxx
