--- a/deployment/kubernetes/helm/charts/kong/charts/konga/values.yaml
+++ b/deployment/kubernetes/helm/charts/kong/charts/konga/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: ***REMOVED***/dna/konga
+  repository: xxxx/dna/konga
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
