--- a/deployment/kubernetes/helm/charts/matomo-mysql/templates/primary/mysql-entire-restore-cronjob.yaml
+++ b/deployment/kubernetes/helm/charts/matomo-mysql/templates/primary/mysql-entire-restore-cronjob.yaml
@@ -14,7 +14,7 @@ spec:
           containers:
             - name: mysql-restore
               image: >-
-                ***REMOVED***/dna/databack/mysql-backup-u1005:dbea4c6457a3df4e7246721757a24f5bea8d4a0c
+                xxxx/dna/databack/mysql-backup-u1005:dbea4c6457a3df4e7246721757a24f5bea8d4a0c
               env:
                 - name: DB_SERVER
                   value: {{ .Values.backupRestore.RESTORE_DB_SERVER }}
