--- a/deployment/kubernetes/helm/charts/matomo/values.yaml
+++ b/deployment/kubernetes/helm/charts/matomo/values.yaml
@@ -57,7 +57,7 @@ extraDeploy: []
 ## @param image.debug Specify if debug logs should be enabled
 ##
 image:
-  registry: ***REMOVED***
+  registry: xxxx
   repository: dna/bitnami/matomo
   tag: 4.12.0-debian-11-r0
   digest: ""
