Feature GenAI based  Similar solutions view

--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -59,6 +59,7 @@ CODESPACE_OPENSEARCH_BUILD_LOGS_URL=${PROJECTSMO_CODESPACE_OPENSEARCH_BUILD_LOGS
 CODESPACE_OIDC_POPUP_URL: ${CODESPACE_OIDC_POPUP_URL},  
 CODESPACE_OIDC_POPUP_WAIT_TIME: ${CODESPACE_OIDC_POPUP_WAIT_TIME},
 VAULT_API_BASEURL: ${VAULT_API_BASEURL},
+SIMILARITY_SEARCH_API_BASEURL: ${SIMILARITY_SEARCH_API_BASEURL},
 ENABLE_CHRONOS_FORECASTING_SERVICE=${PROJECTMO_ENABLE_CHRONOS_FORECASTING_SERVICE}
 ENABLE_DATALAKE_SERVICE=${PROJECTMO_ENABLE_DATALAKE_SERVICE}
 ENABLE_FABRIC_SERVICE=${PROJECTMO_ENABLE_FABRIC_SERVICE}
