changes for adding datavalue range in widget..

--- a/packages/backend/dnambc-lib/src/main/resources/api/UserWidgetPreference.yaml
+++ b/packages/backend/dnambc-lib/src/main/resources/api/UserWidgetPreference.yaml
@@ -266,7 +266,8 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/TagVO"
-
+      dataValueRange:
+        type: string
 
   SolutionPhaseVO:
     type: object
